first game ended

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>First Game - Phaser 3</title>
   <script src="//cdn.jsdelivr.net/npm/phaser@3.19.0/dist/phaser.js"></script>
 
 </head>
@@ -34,15 +34,44 @@
     };
 
     var game = new Phaser.Game(config);
-    var platforms, player, cursors, stars;
+    var platforms, player, cursors, stars, bombs;
+
+    var score = 0;
+    var scoreText;
 
     // Gameplay functions
     function collectStar(player, star) {
       star.disableBody(true, true);
+      score += 10;
+      scoreText.setText(`Score: ${score}`)
+      if (stars.countActive(true) === 0) {
+        stars.children.iterate(function (child) {
+
+          child.enableBody(true, child.x, 0, true, true);
+
+        });
+
+        var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+
+        var bomb = bombs.create(x, 16, 'bomb');
+        bomb.setBounce(1);
+        bomb.setCollideWorldBounds(true);
+        bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
+
+      }
+    }
+    function hitBomb(player, bomb) {
+      this.physics.pause();
+
+      player.setTint(0xff0000);
+
+      player.anims.play('turn');
+
+      gameOver = true;
     }
 
     function preload() {
-      this.load.image('sky', 'assets/sky.png');
+      this.load.image('sky', 'assets/background.png');
       this.load.image('ground', 'assets/platform.png');
       this.load.image('star', 'assets/star.png');
       this.load.image('bomb', 'assets/bomb.png');
@@ -123,6 +152,17 @@
       this.physics.add.collider(stars, platforms);
 
       this.physics.add.overlap(player, stars, collectStar, null, this);
+
+      // HUD configurations
+      scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+
+
+      // Enemies 
+      bombs = this.physics.add.group();
+
+      this.physics.add.collider(bombs, platforms);
+
+      this.physics.add.collider(player, bombs, hitBomb, null, this);
     }
 
     function update() {
@@ -144,7 +184,7 @@
       }
 
       if (cursors.up.isDown && player.body.touching.down) {
-        player.setVelocityY(-400);
+        player.setVelocityY(-600);
       }
     }
   </script>
