--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>First Game - Phaser 3</title>
+  <title>Second Game - Phaser 3</title>
   <script src="//cdn.jsdelivr.net/npm/phaser@3.19.0/dist/phaser.js"></script>
 
 </head>
